ENEX FSL/snapshotDownload (1)/objects/Product2.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>ReadWrite</externalSharingModel><fields><fullName>Activo__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Activo</label><referenceTo>Asset</referenceTo><relationshipLabel>Productos</relationshipLabel><relationshipName>Productos</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>Cantidad_Vac_C0__c</fullName><externalId>false</externalId><label>Cantidad Vac0</label><precision>10</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Cantidad_Vac_C__c</fullName><description>Cantidad de Vac por planta producto. el VAC es un margen de tolerancia de stock: Se ingresa un valor de tolerancia por planta y producto. (Se actualiza mensualmente). No se conserva la historia de esto.</description><externalId>false</externalId><label>Cantidad Vac</label><precision>10</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Codigo_de_Producto_CL__c</fullName><externalId>false</externalId><formula>Producto_CL__r.Codigo_Producto_CL__c</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>SKU</label><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Codigo_de_Producto_Ref_CL__c</fullName><description>Este campo es utilizado para asociar a través de un trigger el producto a planta producto</description><externalId>false</externalId><label>Código de Producto Ref</label><length>80</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Costo_Producto_C0__c</fullName><externalId>false</externalId><label>Costo Producto 0</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Currency</type></fields><fields><fullName>Costo_Producto_C__c</fullName><description>(Lubricantes) Costo que se almacena en planta producto. Estos costos son semanales.</description><externalId>false</externalId><label>Costo Producto</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Currency</type></fields><fields><fullName>DESCRIPCIONUOM__c</fullName><externalId>false</externalId><label>(Deprecado) Descripción Unidad Medida</label><length>30</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Densidad_de_Mezcla_C__c</fullName><externalId>false</externalId><label>Densidad de Mezcla</label><precision>3</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Percent</type></fields><fields><fullName>Familia_Producto_CL__c</fullName><externalId>false</externalId><formula>TEXT(Producto_CL__r.Familia_CL__c)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Familia Producto</label><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>IDSALESFORCE__c</fullName><externalId>false</externalId><label>(Deprecado) ID Salesforce</label><length>18</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Id_Planta_Producto__c</fullName><externalId>false</externalId><formula>Id</formula><label>Id Planta Producto</label><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Impuesto_Especifico_C0__c</fullName><externalId>false</externalId><label>Impuesto Específico 0</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Currency</type></fields><fields><fullName>Impuesto_Especifico_C__c</fullName><externalId>false</externalId><label>Impuesto Específico</label><precision>10</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Currency</type></fields><fields><fullName>Impuesto_FEPP_C0__c</fullName><externalId>false</externalId><label>Impuesto FEPP 0</label><precision>10</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Currency</type></fields><fields><fullName>Impuesto_FEPP_C__c</fullName><externalId>false</externalId><label>Impuesto FEPP</label><precision>10</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Currency</type></fields><fields><fullName>IsDeleted__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>IsDeleted</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>MDA__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>MDA</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>Mineria__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>Mineria</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>Nombre_de_Planta_Ref_CL__c</fullName><description>Este campo es utilizado para poder asociar la planta a planta-producto.</description><externalId>false</externalId><label>Nombre de Planta Ref</label><length>80</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Planta_C__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Planta</label><referenceTo>Planta__c</referenceTo><relationshipLabel>Productos</relationshipLabel><relationshipName>Productos</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>Precio_o_Costo_CL__c</fullName><externalId>false</externalId><formula>IF(RecordType.Name = &apos;Combustible&apos;,   Costo_Producto_C__c ,  Producto_CL__r.Precio_Lista_L__c )</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Precio o Costo</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></fields><fields><fullName>Producto_CL__c</fullName><deleteConstraint>Restrict</deleteConstraint><externalId>false</externalId><label>Producto</label><referenceTo>Producto_Cotizacion__c</referenceTo><relationshipLabel>Productos</relationshipLabel><relationshipName>Productos</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>Proporcion_Mezcla_Actual_C__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Proporción Mezcla Actual</label><referenceTo>Proporcion_Mezcla__c</referenceTo><relationshipLabel>Productos</relationshipLabel><relationshipName>Productos</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>RecordTypeId__c</fullName><externalId>false</externalId><formula>RecordType.Id</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>RecordTypeId</label><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Regi_n_Metropolitana__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>Región Metropolitana?</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>SKU__c</fullName><externalId>true</externalId><label>(Deprecado) SKU</label><length>50</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Sub_Familia__c</fullName><externalId>false</externalId><label>(Deprecado) Sub-Familia</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>ACEITE</fullName><default>false</default><label>ACEITE</label></value><value><fullName>Advance</fullName><default>false</default><label>Advance</label></value><value><fullName>Aeroshell</fullName><default>false</default><label>Aeroshell</label></value><value><fullName>Albida</fullName><default>false</default><label>Albida</label></value><value><fullName>Alexia Oil</fullName><default>false</default><label>Alexia Oil</label></value><value><fullName>Alvania</fullName><default>false</default><label>Alvania</label></value><value><fullName>Antifreeze</fullName><default>false</default><label>Antifreeze</label></value><value><fullName>Argina Oil</fullName><default>false</default><label>Argina Oil</label></value><value><fullName>Asfaltos</fullName><default>false</default><label>Asfaltos</label></value><value><fullName>Balde (Envase)</fullName><default>false</default><label>Balde (Envase)</label></value><value><fullName>Calibration Fluid</fullName><default>false</default><label>Calibration Fluid</label></value><value><fullName>Caprinus</fullName><default>false</default><label>Caprinus</label></value><value><fullName>CARDIUM</fullName><default>false</default><label>CARDIUM</label></value><value><fullName>Castrol</fullName><default>false</default><label>Castrol</label></value><value><fullName>Clavus Oil</fullName><default>false</default><label>Clavus Oil</label></value><value><fullName>Corena Oil</fullName><default>false</default><label>Corena Oil</label></value><value><fullName>Crusher Oil SWR</fullName><default>false</default><label>Crusher Oil SWR</label></value><value><fullName>Cyprina Grease</fullName><default>false</default><label>Cyprina Grease</label></value><value><fullName>Diala</fullName><default>false</default><label>Diala</label></value><value><fullName>Diesel Engine</fullName><default>false</default><label>Diesel Engine</label></value><value><fullName>Diesel Fuel</fullName><default>false</default><label>Diesel Fuel</label></value><value><fullName>Donax</fullName><default>false</default><label>Donax</label></value><value><fullName>Dot</fullName><default>false</default><label>Dot</label></value><value><fullName>Dromus Oil</fullName><default>false</default><label>Dromus Oil</label></value><value><fullName>Ensis Engine Oil</fullName><default>false</default><label>Ensis Engine Oil</label></value><value><fullName>Fluid LHM Citroen</fullName><default>false</default><label>Fluid LHM Citroen</label></value><value><fullName>Fuel Oil 5</fullName><default>false</default><label>Fuel Oil 5</label></value><value><fullName>Fuel Oil 6</fullName><default>false</default><label>Fuel Oil 6</label></value><value><fullName>Gadinia Oil</fullName><default>false</default><label>Gadinia Oil</label></value><value><fullName>Gadus</fullName><default>false</default><label>Gadus</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Sub_Grupo__c</fullName><externalId>false</externalId><label>(Deprecado) Sub-Grupo</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Asfaltos Calientes</fullName><default>false</default><label>Asfaltos Calientes</label></value><value><fullName>Asfaltos Frios</fullName><default>false</default><label>Asfaltos Frios</label></value><value><fullName>Comercial</fullName><default>false</default><label>Comercial</label></value><value><fullName>Diesel</fullName><default>false</default><label>Diesel</label></value><value><fullName>Ejecutiva</fullName><default>false</default><label>Ejecutiva</label></value><value><fullName>Especial</fullName><default>false</default><label>Especial</label></value><value><fullName>Fuel Oil</fullName><default>false</default><label>Fuel Oil</label></value><value><fullName>Gasolinas</fullName><default>false</default><label>Gasolinas</label></value><value><fullName>Kerosene</fullName><default>false</default><label>Kerosene</label></value><value><fullName>Normal</fullName><default>false</default><label>Normal</label></value><value><fullName>Químicos</fullName><default>false</default><label>Químicos</label></value><value><fullName>Repuestos</fullName><default>false</default><label>Repuestos</label></value><value><fullName>Servicios</fullName><default>false</default><label>Servicios</label></value><value><fullName>Soporte Tecnico</fullName><default>false</default><label>Soporte Tecnico</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Texto__c</fullName><externalId>false</externalId><label>Texto</label><length>150</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Tipo_de_Gasto__c</fullName><externalId>false</externalId><label>Tipo de Gasto</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Recobro</fullName><default>false</default><label>Recobro</label></value><value><fullName>No Recobro</fullName><default>false</default><label>No Recobro</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Tipo_de_Producto__c</fullName><externalId>false</externalId><label>Tipo de Producto</label><length>20</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>UOM__c</fullName><externalId>false</externalId><label>(Deprecado) Unidad de Medida</label><length>5</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Unidad_Precio_Costo_CL__c</fullName><externalId>false</externalId><formula>TEXT(Producto_CL__r.Unidad_Precio_Costo_CL__c)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Unidad Precio Costo</label><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><listViews><fullName>AllProducts</fullName><columns>PRODUCT2.NAME</columns><columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns><columns>PRODUCT2.ACTIVE</columns><filterScope>Everything</filterScope><label>Todos los productos</label><language>es</language></listViews><listViews><fullName>Productos_Cristian</fullName><columns>PRODUCT2.NAME</columns><columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns><columns>PRODUCT2.ACTIVE</columns><filterScope>Everything</filterScope><filters><field>Mineria__c</field><operation>equals</operation><value>0</value></filters><label>Productos Cristian</label><language>es</language><sharedTo><role>Administrador_Estaciones_de_Servicio_SGME</role></sharedTo></listViews><listViews><fullName>Productos_Yerko</fullName><columns>PRODUCT2.NAME</columns><columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns><columns>Mineria__c</columns><columns>PRODUCT2.ACTIVE</columns><filterScope>Everything</filterScope><filters><field>Mineria__c</field><operation>equals</operation><value>1</value></filters><label>Productos Yerko</label><sharedTo><role>Administrador_Mineria_SGMM</role></sharedTo></listViews><recordTypeTrackHistory>false</recordTypeTrackHistory><recordTypes><fullName>Asfalto</fullName><active>true</active><label>Asfalto</label></recordTypes><recordTypes><fullName>Combustible</fullName><active>true</active><label>Combustible</label></recordTypes><recordTypes><fullName>Field_Service</fullName><active>true</active><label>Field Service</label></recordTypes><recordTypes><fullName>Lubricante</fullName><active>true</active><label>Lubricante</label></recordTypes><recordTypes><fullName>Quimico</fullName><active>true</active><label>Químico</label></recordTypes><recordTypes><fullName>Repuesto</fullName><active>true</active><label>Repuesto</label></recordTypes><recordTypes><fullName>SGME_Field_Service</fullName><active>true</active><label>SGME Field Service</label></recordTypes><recordTypes><fullName>Servicio_Adicional</fullName><active>true</active><label>Servicio Adicional</label></recordTypes><recordTypes><fullName>ShellCard_Empresa</fullName><active>true</active><label>ShellCard Empresa</label></recordTypes><sharingModel>ReadWrite</sharingModel></CustomObject>